update the proxy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
 
   <form  [formGroup]="itemform" (ngSubmit)="submit(itemform.value)">
 
-    <span class="lead"><strong>Forms Values : userForm.value :</strong></span> {{ itemform.value | json }}
-    <hr />
+<!--    <span class="lead"><strong>Forms Values : userForm.value :</strong></span> {{ itemform.value | json }}-->
+<!--    <hr />-->
 
     <!-- name -->
 <!--    <div class="form-group">-->
